# myagent

./: .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README-zh.md  README.md  SECURITY.md  pyproject.toml  requirements.txt  ruff.toml
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  release.yml
docs/: plan.md
docs/adr/: 0001-dynamic-prompt-assembly.md  0002-rolling-plan-execute-reflect.md  design.md
scripts/: commit-msg.py  pre-commit-check.py
src/: main.py
src/core/: config.py  display.py  graph.py  registry.py  state.py  stream.py
src/llm/: client.py  schemas.py
src/nodes/: chat.py  executor.py  output.py  planner.py  reflector.py  router.py
src/tools/: __init__.py  command_tools.py  file_tools.py  time_tools.py
tests/: conftest.py  test_chat.py  test_display.py  test_executor.py  test_llm.py  test_reflector.py  test_registry.py  test_state.py  test_stream.py  test_tools.py
