[project]
name = "myagent"
version = "0.1.0"
description = "A LangGraph-based programming agent"
requires-python = ">=3.11"
dependencies = [
    "langgraph>=0.2.0",
    "langchain-openai>=0.2.0",
    "langchain-anthropic>=0.3.0",
    "langchain-community>=0.3.0",
    "pydantic>=2.0",
    "python-dotenv>=1.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.5.0",
    "pre-commit>=3.0",
    "lizard>=1.17.10",
    "pip-tools>=7.0",
    "pip-audit>=2.0",
]

[project.scripts]
myagent = "src.main:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "C9", "PL"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["PLR0915", "C901", "PLR0911"]
"src/llm/client.py" = ["PLR0913"]
"src/nodes/planner.py" = ["E501"]
"src/tools/command_tools.py" = ["PLW1509"]

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.ruff.lint.pylint]
max-statements = 150

[tool.ruff.format]
quote-style = "double"

[tool.coverage.run]
source = ["src"]
omit = ["*/tests/*"]
