[project]
name = "myagent"
version = "0.1.0"
description = "A LangGraph-based programming agent"
requires-python = ">=3.11"
dependencies = [
    "langgraph>=0.2.0",
    "langchain-openai>=0.2.0",
    "langchain-anthropic>=0.3.0",
    "langchain-community>=0.3.0",
    "pydantic>=2.0",
    "python-dotenv>=1.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.5.0",
    "pre-commit>=3.0",
    "lizard>=1.17.10",
    "pip-tools>=7.0",
    "pip-audit>=2.0",
]

[project.scripts]
myagent = "src.main:main"

[project.urls]
Homepage = "https://github.com/noisystreet/myagent"
Repository = "https://github.com/noisystreet/myagent"
BugTracker = "https://github.com/noisystreet/myagent/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["src"]
omit = ["*/tests/*"]
